Login controler e necessidade de autorização
